# global-connector

./: .gitignore  Dockerfile  README.md  docker-compose.yml  dummy_backend.py  fly.corepy.toml  fly.dev.toml  fly.test.toml  fly.toml  package.json  patch_add_agent_system.diff  patch_use_existing_secret.diff  requirements.txt
app/: main.py  security.py
app/agents/: info_only_agent.py  intent.py  service_agent.py
app/clients/: backend_api.py  catalog_api.py
app/core/: agent_manager.py  session_store.py
app/integrations/: telegram.py
app/telegram/: ui.py  (+1 more)
apps/globalconnector-agent/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  fly.toml  pyproject.toml  ruff.toml
apps/globalconnector-agent/config/: config.py  logger.py
apps/globalconnector-agent/data/: appointment.json  created_services.json  nearby_hotel.json  nearby_restaurants.json  orders.json  prices.json
apps/globalconnector-agent/src/globalconnector_agent/: main.py
apps/globalconnector-agent/src/globalconnector_agent/core/: prompts.py  service.py
apps/globalconnector-agent/src/globalconnector_agent/core/agents/: appointment.py  base.py  booking.py  coordinator.py  ordering.py  payment.py  prices.py  service_add.py  service_use.py
apps/globalconnector-agent/src/globalconnector_agent/core/tools/: appointment.py  booking.py  ordering.py  payment.py  prices.py  services.py
apps/globalconnector-agent/src/globalconnector_agent/routers/: app.py  data_model.py
apps/globalconnector-agent/src/globalconnector_agent/utils/: __init__.py  utils.py
(+101 files in other folders)
