[project]
name = "globalconnector-agent"
version = "0.1.0"
description = "Service Bot for automatic service registration, discovery and payment"
readme = "README.md"
requires-python = ">=3.12"


dependencies = [
    "fastapi>=0.116.0",
    "google-adk>=1.6.1",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "pre-commit>=4.2.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = [
    "src/globalconnector_agent/core",
    "src/globalconnector_agent/routers",
    "src/globalconnector_agent/utils",
    "config"
]

[project.scripts]
service_bot = "routers.app:main"
